<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="@string/pref_apikey_default"
        android:inputType="text"
        android:key="@string/pref_apikey_key"
        android:singleLine="true"
        android:title="@string/pref_apikey_label" />

    <ListPreference
        android:title="@string/pref_sort_label"
        android:key="@string/pref_sort_key"
        android:defaultValue="@string/pref_sort_popular_most"
        android:entryValues="@array/pref_sort_values"
        android:entries="@array/pref_sort_options" />

    <ListPreference
        android:title="@string/pref_size_label"
        android:key="@string/pref_size_key"
        android:defaultValue="@string/pref_logosize_label_w45"
        android:entryValues="@array/pref_size_values"
        android:entries="@array/pref_size_options" />
</PreferenceScreen>
